# ofxGgmlAgents

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  HERMES.md  README.md  addon_config.mk  ofxggml-addon.json
.github/: copilot-instructions.md
.github/instructions/: ofxggml-ecosystem.instructions.md
.github/workflows/: backend-runtime-check.yml  release-check.yml  release-gate.yml
docs/: AGENT_WORKFLOWS.md  ARCHITECTURE.md  LOCAL_LLM_ENDPOINTS.md  QUICKSTART.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_TEMPLATE.md  RELEASE_POLICY.md  ROADMAP.md
docs/releases/: v1.0.1.md
ofxGgmlAgentsCodexLocalExample/: README.md  addons.make  codex-config.example.toml
ofxGgmlAgentsCodexLocalExample/src/: ofApp.cpp  ofApp.h
ofxGgmlAgentsPlannerExample/: README.md  addons.make
ofxGgmlAgentsPlannerExample/src/: ofApp.cpp  ofApp.h
scripts/: doctor-agents.bat  doctor-agents.ps1  doctor-agents.sh  generate-release-readiness-score.ps1  generate-release-readiness-score.py  release-candidate.ps1  run-agents-runtime-smoke.bat  run-agents-runtime-smoke.ps1  run-agents-runtime-smoke.sh  test-addon.ps1  test-agents-runtime-smoke.ps1  test-doctor-agents.ps1  test-release-readiness-score.ps1  validate-local.ps1
src/: ofxGgmlAgents.h  ofxGgmlAgentsVersion.h
src/ofxGgmlAgents/: ofxGgmlAgentsTypes.h  ofxGgmlAgentsUtils.cpp  ofxGgmlAgentsUtils.h
tests/: CMakeLists.txt  test_main.cpp
